# upgrade-contracts

./: brownie-config.yaml  pyproject.toml
contracts/: BoxV2.sol
scripts/: deploy_and_upgrade.py  helpers.py
tests/: test_box_proxy.py  test_box_v2_upgrades.py
