[tool.poetry]
name = "upgrades"
version = "0.1.0"
description = ""
authors = ["washbin <76929116+washbin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.9"
eth-brownie = "^1.17.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
